test/classes/initializers/generics/param-record-field.good
param-record-field.chpl:4: error: 'r' is not of a supported param type
